syntax = "proto3";

package problemPackage;

service problemManagement{
    rpc getProblem(pin) returns (Problem);
    rpc getProblems(empty) returns (Problems);
    rpc getProblemsByState(ProblemState) returns (Problems);
    rpc getProblemByReporter(string) returns (Problems);
    rpc addProblem(Problem) returns (pin);
    rpc updateProblem(pin, Problem) returns (Problem);
    rpc deleteProblem(pin) returns (empty);
}

message empty{}

message pin {
    oneof identifier {
    int32 pin = 1;
    }
}

message Problem{
    int32 reference = 1;
    string title = 2;
    string description = 3;
    ProblemState problemState = 4;
    Date date = 5;
    string reporter = 6;
}

message Problems {
    repeated Problem problems = 1;
}

message ProblemState {
    Problem problemState = 1;
}

message Date {
    int32 year = 1;
    int32 month = 2;
    int32 day = 3;
}
