syntax = "proto3";

package edu.kit.tm.cm.proto;

option java_multiple_files = true;
option java_package = "edu.kit.tm.cm.proto";

import "google/protobuf/timestamp.proto";

service ProblemManagement {
  rpc ListProblems(ListProblemsRequest) returns (ListProblemsResponse);
  rpc GetProblem(GetProblemRequest) returns (GetProblemResponse);
  rpc CreateProblem(CreateProblemRequest) returns (CreateProblemResponse);
  rpc UpdateProblem(UpdateProblemRequest) returns (UpdateProblemResponse);
  rpc RemoveProblem(RemoveProblemRequest) returns (RemoveProblemResponse);
  rpc ChangeState(ChangeStateRequest) returns (ChangeStateResponse);
}

// requests and responses

message ListProblemsRequest{
    GrpcListSettings list_settings = 1;
}

message ListProblemsResponse{
  repeated GrpcProblem problems = 1;
}

message GetProblemRequest{
  string identification_number = 1;
}

message GetProblemResponse{
  GrpcProblem problem = 1;
  repeated GrpcStateOperation possible_state_operations = 2;
}

message CreateProblemRequest{
  GrpcProblem problem = 1;
}

message CreateProblemResponse{
  GrpcProblem problem = 1;
}

message UpdateProblemRequest{
  GrpcProblem problem = 1;
  string identification_number = 2;
}

message UpdateProblemResponse{
  GrpcProblem problem = 1;
}

message RemoveProblemRequest{
  string identification_number = 1;
}

message RemoveProblemResponse{
}

message ChangeStateRequest{
  GrpcStateOperation grpc_state_operation = 1;
  string identification_number = 2;
}

message ChangeStateResponse{
}

// single message constructions

message GrpcProblem{
  GrpcProblemState problem_state = 1;
  string identification_number = 2;
  string problem_title = 3;
  string problem_description = 4;
  string problem_reporter = 5;
  google.protobuf.Timestamp creation_time = 6;
  string reference_identification_number = 7;
}

message GrpcListSettings{
  Values values = 2;
  Selection selection = 3;
}

message Selection{
  GrpcSortOption grpc_sort_option = 1;
  bool reporter_filter_selected = 2;
  bool state_filter_selected = 3;
}

message Values{
  repeated string reporters = 1;
  repeated GrpcProblemState states = 2;
}

enum GrpcProblemState{
  UNKNOWN_PROBLEM_STATE = 0;
  ACCEPTED = 1;
  DECLINED = 2;
  IN_PROGRESS = 3;
  OPEN = 4;
  CLOSED = 5;
}

enum GrpcStateOperation{
  UNKNOWN_STATE_OPERATION = 0;
  ACCEPT = 1;
  CLOSE = 2;
  DECLINE = 3;
  APPROACH = 4;
  HOLD = 5;
}

enum GrpcSortOption{
  UNKNOWN_SORT_OPTION = 0;
  DEFAULT_SORT_OPTION = 1;
  DESCENDING_TIME_STAMP = 2;
  ASCENDING_TIME_STAMP = 3;
}
